fixed about company layout issue on narrow screens, caused by fm-style-timeline width

--- a/app-dev/styles/pages/about-platform.css
+++ b/app-dev/styles/pages/about-platform.css
@@ -196,6 +196,17 @@
 	}
 
 
+.advantage-3 {}
+	.advantage-3 h2 {
+		margin-bottom: 2.5rem;
+	}
+	.advantage-3 .illustrate {
+		position: relative;
+		height: 27rem;
+		width: auto;
+		margin: 5rem auto;
+	}
+
 
 
 
